add profile pic

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-{% load static %}
 <html>
 
 <title>Ahmed Gharib</title>
@@ -27,7 +26,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="{% static 'images/Gharibz.png' %}" style="width:100%" alt="Ahmed Gharib">
+          <img src="images/gharib.png" style="width:100%" alt="Ahmed Gharib">
           <div class="w3-card-4 w3-display-bottomleft w3-tag w3-black" style="width:100%;">
             <h2>Ahmed Gharib</h2>
           </div>
