--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <title>Ahmed Gharib</title>
 
-<link rel="icon" href="https://github.com/ahmed-gharib89/ahmed-gharib89/blob/master/dark.png">
+<link rel="icon" href="images/dark.png">
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
