--- a/index.html
+++ b/index.html
@@ -183,20 +183,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
         <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-file-text fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Summary</h2>
-          <p>My way from accountant to a passionate self-taught programmer </p>
-           <p> Ever since I was a little kid (computers, video games & mobiles) has been my passion.</p>
-           <p> I grew up to be an accountant as I also love working with numbers,
-           but this never stopped me from my passion toward technology and software industry,
-           as everyday after work when I get home, I open YouTube and search for everything new about mobiles & mobile Apps.</p>
-           <p>Not to mention that I’m a big fan for <a href="https://www.youtube.com/user/Mrwhosetheboss" target="_blank" class="w3-hover-opacity">Mrwhosetheboss</a> channel on YouTube,
-           and I was very inspired by his character and how he is very passionate about what he is doing.</p>
-           <p> So, one day I realized that I really want to do what I love the most; and I started studying.</p>
-           <p> First, I started studying all what was related to my current field and more as an account payable:
-            (Excel, Power query, Dax functions, Access, VBA, Dashboards, Power BI)</p>
-           <p>Then I began to study :
-            (SQL, SQLite3, relational database, Unix shell, Python, Django, PYQT5, QT designer, Conda, pandas, matplotlib, seaborn, data cleaning and visualization, scikit learn, supervised and unsupervised machine learning, clustering, statistics, GIT, RegEX, HTML, CSS)</p>
-           <p>Still on the list to go :
-            (Machine Learing, AI, web scraping, PySpark)</p>
+          <p>Passionate and self-taught person in fields of Data Science and Machine Learning, experienced in Accounting field for 10 years, trying to link these fields together.<br>
+            Experienced in Math, Statistics, SQL, Python and its biggest libraries (Pandas, NumPy, Scikit-learn, PyTorch, Tensor Flow, Keras,  Matplotlib, Seaborn, …).<br>
+             Strong Data cleaning and visualization skill, data analysis professional, with high knowledge in building Machine Learning Models using Cloud Services on Azure and AWS.<br>
+            My latest project <a href="https://github.com/ahmed-gharib89/deploy-sentiment-analysis-model" target="_blank">Sentiment Analysis Web App</a>: simple webapp to predict whether a movie review is positive or negative using Pytorch and AWS SageMaker.<br>
+            </p>
 
             <hr>
         </div>
