--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
            <p class="w3-large"><b><i class="fa fa-forward fa-fw w3-margin-right w3-text-black"></i>Skills</b></p>
 
           <p class="w3-large"><i class="fa fa-code w3-margin-right w3-text-black"></i>Programming</p>
-            <p>Python for data analysis</p>
+            <p>Python (NumPy, Pandas, Matplotlib, Seaborn</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:70%">
-              <div class="w3-center w3-text-white">70%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:80%">
+              <div class="w3-center w3-text-white">80%</div>
             </div>
             </div>
             <p>SQL </p>
@@ -53,84 +53,56 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <div class="w3-center w3-text-white">80%</div>
             </div>
             </div>
-            <p>Machine-Learnin & AI</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:40%">
-              <div class="w3-center w3-text-white">40%</div>
-            </div>
-            </div>
-            <p>Git</p>
+            <p>Machine-Learnin (Scikit-learn, SciPy</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:60%">
               <div class="w3-center w3-text-white">60%</div>
             </div>
             </div>
-            <p>HTML - CSS </p>
+            <p>Deep-Learnin (Pytorch, Tensor Flow, Keras</p>
+            <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:60%">
+              <div class="w3-center w3-text-white">60%</div>
+            </div>
+            </div>
+            <p>Git & Github</p>
+            <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:60%">
+              <div class="w3-center w3-text-white">60%</div>
+            </div>
+            </div>
+            <p>Web development (Javascript, JQuery, HTML, CSS, Flask </p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:50%">
               <div class="w3-center w3-text-white">50%</div>
             </div>
             </div>
-            <p>Photoshop</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:40%">
-              <div class="w3-center w3-text-white">40%</div>
-            </div>
-            </div>
-            <br>
 
         <p class="w3-large"><i class="fa fa-line-chart w3-margin-right w3-text-black w3-margin-top"></i>Data Analysis</p>
-            <p>Data Cleaning</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:100%">100%</div>
-            </div>
             <p>Data Wrangling</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:100%">100%</div>
-            </div>
-            <p>Exploring and Drawing Conclusions</p>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:75%">75%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:90%">90%</div>
             </div>
             <p>Data Visualization and Dashboards</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:90%">90%</div>
             </div>
+            <p>MS Office Excel</p>
+            <div class="w3-light-grey w3-round-xlarge w3-small">
+              <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:90%">90%</div>
+            </div>
+            <p>Power BI</p>
+            <div class="w3-light-grey w3-round-xlarge w3-small">
+              <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:80%">80%</div>
+            </div>
+            <p>Tableau</p>
+            <div class="w3-light-grey w3-round-xlarge w3-small">
+              <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:50%">50%</div>
+            </div>
           <br>
 
-            <p class="w3-large"><i class="fa fa-file-excel-o w3-margin-right w3-text-black w3-margin-top"></i>MS Office Excel</p>
-              <p>Basics</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:100%">100%</div>
-              </div>
-              <p>Advanced Formulas</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:100%">100%</div>
-              </div>
-              <p>Array Formulas</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:90%">90%</div>
-              </div>
-              <p>Pivot Table</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:90%">90%</div>
-              </div>
-              <p>Power Query (M Code)</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:90%">90%</div>
-              </div>
-              <p>Data Model (Dax)</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:70%">70%</div>
-              </div>
-              <p>VBA</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:70%">70%</div>
-              </div>
-              <br>
-
             <p class="w3-large"><i class="fa fa-refresh w3-margin-right w3-text-black w3-margin-top"></i>Proficency</p>
-              <p>Microsoft Dynamics AX</p>
+              <p>Microsoft Dynamics AX 2012</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:80%">80%</div>
               </div>
@@ -142,23 +114,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:60%">60%</div>
               </div>
-              <p>Infor Sun System</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:85%">85%</div>
-              </div>
-              <p>Comsys</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:70%">70%</div>
-              </div>
-              <p>Micros</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:60%">60%</div>
-              </div>
-              <p>Resturant Manager</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:75%">75%</div>
-              </div>
-              <br>
 
           <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-black"></i>Languages</b></p>
           <p>Arabic</p>
