--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             </div>
             <p>Git & Github</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:60%">
-              <div class="w3-center w3-text-white">60%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:70%">
+              <div class="w3-center w3-text-white">70%</div>
             </div>
             </div>
             <p>Web development (Javascript, JQuery, HTML, CSS, Flask </p>
@@ -155,23 +155,23 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>Accounts Payable Supervisor / Al Safy Group</b></h5>
           <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2018 - <span class="w3-tag w3-opacity w3-round">Current</span></h6>
 			<p>▪ Preparation of monthly commissions file, including all calculations related to coworker variable compensation,
-			while ensuring accuracy of payments.</p>
+      while ensuring accuracy of payments.</p>
+      <p>▪ Extract and create custom reports from SQL server database.</p>
+      <p>▪ Create and maintain monthly sales dashboard.</p>
 			<p>▪ Process applicable monthly accounting journal entries as part of the month-end close accounting schedule.</p>
 			<p>▪ Consistently review the commission process, while making applicable improvement recommendations to direct manager.</p>
 			<p>▪ Completion of various sales productivity analysis and reporting.</p>
 			<p>▪ Reporting and analysis of the customer account reassign process.</p>
 			<p>▪ Translates business requirements into specifications used to implement the required reports and dashboards.</p>
 			<p>▪ Reconciles processed work by verifying entries and comparing system reports to balances.</p>
-            <p>▪ Charges expenses to accounts and cost centers by analyzing invoice/expense reports; recording entries.
-            <p>▪ Pays vendors by monitoring discount opportunities; verifying federal id numbers;
-               scheduling and preparing checks; resolving purchase order, contract, invoice,
-               or payment discrepancies and documentation; insuring credit is received for outstanding memos;
-               issuing stop-payments or purchase order amendments.</p>
-            <p>▪ Pays employees by receiving and verifying expense reports and requests for advances; preparing checks.</p>
-            <p>▪ Maintains accounting ledgers by verifying and posting account transactions.</p>
-            <p>▪ Verifies vendor accounts by reconciling monthly statements and related transactions.</p>
-
-          <hr>
+      <p>▪ Charges expenses to accounts and cost centers by analyzing invoice/expense reports; recording entries.
+      <p>▪ Pays vendors by monitoring discount opportunities; verifying federal id numbers;
+          scheduling and preparing checks; resolving purchase order, contract, invoice,
+          or payment discrepancies and documentation; insuring credit is received for outstanding memos;
+          issuing stop-payments or purchase order amendments.</p>
+      <p>▪ Maintains accounting ledgers by verifying and posting account transactions.</p>
+      <p>▪ Verifies vendor accounts by reconciling monthly statements and related transactions.</p>
+      <hr>
         </div>
 
         <!-- 2nd Work -->
