--- a/index.html
+++ b/index.html
@@ -216,117 +216,34 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Online Self Study</b></h5>
           <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever</h6>
-          <p>Data Science.</p>
-		  <p>Excel.</p>
-		  <p>Python.</p>
-		  <p>Machine Learning.</p>
-		  <p>AI.</p>
-		  <p>SQL.</p>
+          <p>I have taken more than 120 online course at 
+                                                         <a href="https://www.udacity.com/" target="_blank">Udacity</a>,
+                                                         <a href="https://www.coursera.org/" target="_blank">Coursera</a>, 
+                                                         <a href="https://www.datacamp.com/" target="_blank">Datacamp</a>,
+                                                         <a href="https://www.pluralsight.com/" target="_blank">Pluralsight</a>, 
+                                                         <a href="https://www.linkedin.com/learning/?trk=nav_neptune_learning" target="_blank">Linkedin Learning</a> and
+                                                         <a href="https://www.udemy.com/" target="_blank">Udemy</a>
+                related to Data Sciencs and Machine learning and currently studying 
+            <a href="https://www.udacity.com/course/machine-learning-engineer-nanodegree--nd009t" target="_blank">Machine Learning Engineer nanodegree</a>
+          </p>
           <hr>
         </div>
 
         <div class="w3-container">
-          <h5 class="w3-opacity"><b><a href="https://www.udacity.com/" target="_blank" class="w3-hover-opacity">Udacity</a></b></h5>
           <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - <span class="w3-tag w3-opacity w3-round">Current</span></h6>
-          <p>▪ Data Analysis Challenger Track (EGFWD)</p>
-          <p>▪ Intro to deep learning with pytorch</p>
-          <p>▪ Intro to machine learning</p>
-          <p>▪ AWS machine learning foundation course</p>
-          <p>▪ SQL for data analysis</p>
-          <p>▪ Version control with GIT</p>
-          <p>▪ Statistics</p>
-          <p>▪ Linear Algebra</p>
+          <a href="https://graduation-api.udacity.com/api/certificate/HPKMNDHK/download" target="_blank">Data Analysis Professional Nanodegree</a><br>
+          <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/LEUNCGT2KXCV" target="_blank">Deep Learning Specialization</a><br>
+          <a href="https://graduation-api.udacity.com/api/certificate/HUZMETNC/download" target="_blank">Programming for Data Science Nanodegree</a><br>
+          <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/BRY439L2CQD7" target="_blank">Mathematics for Machine Learning Specialization</a><br>
+          <a href="https://www.datacamp.com/statement-of-accomplishment/track/735a5253913e17fc3c0ad15d11d897a565172bd5" target="_blank">Data Scientist with Python Track</a><br>
+          <a href="https://www.datacamp.com/statement-of-accomplishment/track/d445c2b843e76eb06e95884e8863312cb4edce89" target="_blank">Data Analyst with Python Track</a><br>
+          <a href="https://www.datacamp.com/statement-of-accomplishment/track/3357c731d727f6a7a6573ad7212f758138bdcb9f" target="_blank">Python Programming Track</a><br>
           <hr>
         </div>
 
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b><a href="https://learn.datacamp.com/" target="_blank" class="w3-hover-opacity">Data Camp</a></b></h5>
-          <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2020</h6>
-          <p>Data Scientist with Python Track</p>
-          <p>Credential URL <a href="https://www.datacamp.com/statement-of-accomplishment/track/735a5253913e17fc3c0ad15d11d897a565172bd5" target="_blank">Data Camp</a></p>
-          <hr>
-        </div>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b><a href="https://learn.datacamp.com/" target="_blank" class="w3-hover-opacity">Data Camp</a></b></h5>
-          <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2020</h6>
-          <p>Data Analyst with Python Track</p>
-          <p>Credential URL <a href="https://www.datacamp.com/statement-of-accomplishment/track/d445c2b843e76eb06e95884e8863312cb4edce89" target="_blank">Data Camp</a></p>
-          <hr>
-        </div>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b><a href="https://learn.datacamp.com/" target="_blank" class="w3-hover-opacity">Data Camp</a></b></h5>
-          <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2020</h6>
-          <p>Python Programming Track</p>
-          <p>Credential URL <a href="https://www.datacamp.com/statement-of-accomplishment/track/3357c731d727f6a7a6573ad7212f758138bdcb9f" target="_blank">Data Camp</a></p>
-          <hr>
-        </div>
 
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b><a href="https://www.pluralsight.com/" target="_blank" class="w3-hover-opacity">Pluralsight</a></b></h5>
-          <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - <span class="w3-tag w3-opacity w3-round">Current</span></h6>
-          <p>▪ Python Best Practice for Code Quality</p>
-          <p>▪ Core Python Getting Started</p>
-          <p>▪ Python the Big Picture</p>
-          <p>▪ Core Python - Organizing Larger Programs</p>
-          <p>▪ Core Python - Functions and Functional Programming</p>
-          <p>▪ Core Python - Numeric Types, Dates, and Times</p>
-          <p>▪ Python - Beyond the Basics</p>
-          <p>▪ Managing Python Packages and Virtual Environments</p>
-          <p>▪ Unit Testing with Python</p>
-          <p>▪ Django Getting Started</p>
-          <p>▪ Code School - Try Django</p>
-          <p>▪ HTML Fundamentals</p>
-          <p>▪ Code School - Digging into Django</p>
-          <p>▪ Getting Started with Django CMS</p>
-          <p>▪ Code School - Try Python</p>
-          <p>▪ Code School - Flying Through Python</p>
-          <p>▪ Pandas Fundamentals</p>
-          <p>▪ Building Your First Python Analytics Solution</p>
-          <p>▪ Python for Data Analysts</p>
-          <p>▪ Programming Python Using an IDE</p>
-          <p>▪ Create and Share Analytics with Jupyter Notebooks</p>
-          <p>▪ React The Big Picture</p>
-          <p>▪ Advanced Python</p>
-          <hr>
-        </div>
 
-         <div class="w3-container">
-          <h5 class="w3-opacity"><b><a href="https://www.linkedin.com/learning/me?trk=nav_neptune_learning" target="_blank" class="w3-hover-opacity">Linkedin Learning</a></b></h5>
-          <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - <span class="w3-tag w3-opacity w3-round">Current</span></h6>
-          <p>▪ Excel Business Intelligence Power Query</p>
-          <p>▪ Financial Accounting Part 1</p>
-          <p>▪ Financial Accounting Part 2</p>
-          <p>▪ Cert Prep Excel Expert Microsoft Office Specialist For Office 2019 And Office 365</p>
-          <p>▪ Microsoft Excel Using Solver For Decision Analysis</p>
-          <p>▪ Access Vba</p>
-          <p>▪ Access 2019 Forms And Reports</p>
-          <p>▪ Access 2019 Macros</p>
-          <p>▪ Access 2019 Queries</p>
-          <p>▪ Access 2019 Tips Tricks And Techniques</p>
-          <p>▪ Relational Databases Essential Training</p>
-          <p>▪ Python Essential Training</p>
-          <p>▪ Access Essential Training Office 365</p>
-          <p>▪ Advanced Microsoft Power Bi</p>
-          <p>▪ Cert Prep Excel 2016 Microsoft Office Expert 77 728</p>
-          <p>▪ Power Bi Data Methods</p>
-          <p>▪ Excel Business Intelligence Power Pivot And Dax</p>
-          <p>▪ Excel Power Query (Get & Transform)</p>
-          <p>▪ Excel Power Query Tips And Techniques Office 365</p>
-          <p>▪ Excel Business Intelligence Data Modeling 101</p>
-          <hr>
-        </div>
 
-         <div class="w3-container">
-          <h5 class="w3-opacity"><b><a href="https://www.udemy.com/" target="_blank" class="w3-hover-opacity">Udemy</a></b></h5>
-          <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - <span class="w3-tag w3-opacity w3-round">Current</span></h6>
-          <p>▪ Access Biggener to advance</p>
-          <p>▪ Advanced Excel</p>
-          <p>▪ visually effective excel dashboards</p>
-          <p>▪ Excel Data Visualisation</p>
-          <p>▪ Python GUI Programming Recipes using PyQt5</p>
-          <p>▪ Unlock Excel VBA and Excel Macros</p>
-          <hr>
-        </div>
 
         <div class="w3-container">
           <h5 class="w3-opacity"><b>AinShams University</b></h5>
