--- a/index.html
+++ b/index.html
@@ -132,8 +132,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     </div>
 
     <!-- Right Column -->
-
-
     <div class="w3-twothird">
 
         <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -166,25 +164,24 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   
           <div class="w3-container">
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - <span class="w3-tag w3-opacity w3-round">Current</span></h6>
-            <a href="https://graduation-api.udacity.com/api/certificate/HPKMNDHK/download" target="_blank">Data Analysis Professional Nanodegree</a><br>
-            <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/LEUNCGT2KXCV" target="_blank">Deep Learning Specialization</a><br>
-            <a href="https://graduation-api.udacity.com/api/certificate/HUZMETNC/download" target="_blank">Programming for Data Science Nanodegree</a><br>
-            <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/BRY439L2CQD7" target="_blank">Mathematics for Machine Learning Specialization</a><br>
-            <a href="https://www.datacamp.com/statement-of-accomplishment/track/735a5253913e17fc3c0ad15d11d897a565172bd5" target="_blank">Data Scientist with Python Track</a><br>
-            <a href="https://www.datacamp.com/statement-of-accomplishment/track/d445c2b843e76eb06e95884e8863312cb4edce89" target="_blank">Data Analyst with Python Track</a><br>
-            <a href="https://www.datacamp.com/statement-of-accomplishment/track/3357c731d727f6a7a6573ad7212f758138bdcb9f" target="_blank">Python Programming Track</a><br>
-            <hr>
+            <div class="w3-half">
+              <a href="https://graduation-api.udacity.com/api/certificate/HPKMNDHK/download" target="_blank">Data Analysis Professional Nanodegree</a><br>
+              <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/LEUNCGT2KXCV" target="_blank">Deep Learning Specialization</a><br>
+              <a href="https://graduation-api.udacity.com/api/certificate/HUZMETNC/download" target="_blank">Programming for Data Science Nanodegree</a><br>
+              <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/BRY439L2CQD7" target="_blank">Mathematics for Machine Learning Specialization</a><br>
+            </div>
+            <div class="w3-half">
+              <a href="https://www.datacamp.com/statement-of-accomplishment/track/735a5253913e17fc3c0ad15d11d897a565172bd5" target="_blank">Data Scientist with Python Track</a><br>
+              <a href="https://www.datacamp.com/statement-of-accomplishment/track/d445c2b843e76eb06e95884e8863312cb4edce89" target="_blank">Data Analyst with Python Track</a><br>
+              <a href="https://www.datacamp.com/statement-of-accomplishment/track/3357c731d727f6a7a6573ad7212f758138bdcb9f" target="_blank">Python Programming Track</a><br>
+            </div>
           </div>
-  
-  
-  
-  
+          <hr>
   
           <div class="w3-container">
             <h5 class="w3-opacity"><b>AinShams University</b></h5>
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2008 - 2011</h6>
-        <p>Bachelor's degree,</p>
-        <p>Faculty of Commerce</p>
+        <p>Bachelor's degree, Faculty of Commerce.</p>
         <br>
           </div>
         
