--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <div class="w3-center w3-text-white">50%</div>
             </div>
             </div>
-
+            <hr>
         <p class="w3-large"><i class="fa fa-line-chart w3-margin-right w3-text-black w3-margin-top"></i>Data Analysis</p>
             <p>Data Wrangling</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
@@ -99,7 +99,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <div class="w3-light-grey w3-round-xlarge w3-small">
               <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:50%">50%</div>
             </div>
-          <br>
+          <hr>
 
             <p class="w3-large"><i class="fa fa-refresh w3-margin-right w3-text-black w3-margin-top"></i>Proficency</p>
               <p>Microsoft Dynamics AX 2012</p>
@@ -114,6 +114,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:60%">60%</div>
               </div>
+              <hr>
 
           <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-black"></i>Languages</b></p>
           <p>Arabic</p>
@@ -126,6 +127,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <br>
         </div>
+        <br>
+        <br>
+        <br>
+        <br>
       </div><br>
 
     <!-- End Left Column -->
@@ -142,14 +147,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             My latest project <a href="https://github.com/ahmed-gharib89/deploy-sentiment-analysis-model" target="_blank">Sentiment Analysis Web App</a>: simple webapp to predict whether a movie review is positive or negative using Pytorch and AWS SageMaker.<br>
             </p>
 
-            <hr>
         </div>
         <div class="w3-container w3-card w3-white">
           <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Education</h2>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Online Self Study</b></h5>
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever</h6>
-            <p>I have taken more than 120 online course at 
+            <p>I have taken more than 120 online courses at 
                                                            <a href="https://www.udacity.com/" target="_blank">Udacity</a>,
                                                            <a href="https://www.coursera.org/" target="_blank">Coursera</a>, 
                                                            <a href="https://www.datacamp.com/" target="_blank">Datacamp</a>,
@@ -182,9 +186,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h5 class="w3-opacity"><b>AinShams University</b></h5>
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2008 - 2011</h6>
         <p>Bachelor's degree, Faculty of Commerce.</p>
-        <br>
           </div>
-        
         </div>
         <br>
 
@@ -248,7 +250,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
             <h5 class="w3-opacity"><b>Collector / The International Hospital for Urology and Nephrology</b></h5>
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2009 - Feb 2013</h6>
-            <hr>
         </div>
       </div>
 
