add project section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <style>
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </style>
@@ -146,8 +147,55 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
              Strong Data cleaning and visualization skill, data analysis professional, with high knowledge in building Machine Learning Models using Cloud Services on Azure and AWS.<br>
             My latest project <a href="https://github.com/ahmed-gharib89/deploy-sentiment-analysis-model" target="_blank">Sentiment Analysis Web App</a>: simple webapp to predict whether a movie review is positive or negative using Pytorch and AWS SageMaker.<br>
             </p>
-
         </div>
+
+        <div class="w3-container w3-card w3-white">
+          <h2 class="w3-text-grey w3-padding-16"><i class="material-icons fa-fw w3-margin-right w3-xxlarge w3-text-black">assessment</i>Projects</h2>
+          <div class="w3-container">
+            <div class="w3-half">
+            <h5 class="w3-opacity"><b>Deploy Sentiment Analysis Model</b></h5>
+            <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>ٍSep 2020</h6>
+            <p>
+              Web app to analyse movie reviews using Pytorch and RNNs to create a model that can predict whether the review is positive or negative and deployed the web application on AWS.
+              <a href="https://github.com/ahmed-gharib89/deploy-sentiment-analysis-model" target="_blank">See project</a>
+            </p>
+            <h5 class="w3-opacity"><b>We Rate Dog Analysis</b></h5>
+            <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2020</h6>
+            <p>
+              We rate dog is a twitter account with funny and interesting tweets of rating dogs.
+              The project main objectives were:
+              - Perform data wrangling (gathering, assessing and cleaning) on the provided sources of data.
+              - Store, analyze, and visualize the wrangled data.
+              - Reporting on
+              - data wrangling efforts.
+              - data analyses and visualizations.
+              <a href="https://github.com/ahmed-gharib89/deploy-sentiment-analysis-model" target="_blank">See project</a>
+            </p>
+            </div>
+            <div class="w3-half">
+              <h5 class="w3-opacity"><b>Plagiarism Detection</b></h5>
+              <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>ٍSep 2020</h6>
+              <p>
+                a plagiarism detector that examines a text file and performs binary classification;<br>
+                 labeling that file as either plagiarized or not, depending on how similar that text file is to a provided source text.
+                technology used: 
+                  - Pytorch: fully connected neral network to discover the battern in the data.
+                  - AWS Sagemaker.
+                <a href="https://github.com/ahmed-gharib89/Plagiarism_Detection" target="_blank">See project</a>
+              </p>
+            <h5 class="w3-opacity"><b>Sakila DVD Rental Analysis</b></h5>
+            <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jul 2020</h6>
+            <p>
+              The Sakila Database holds information about a company that rents movie DVDs.
+              ln this project we discover the customer base, such as what the patterns in movie watching are across different customer groups, how they compare on payment earnings, and how the stores compare in their performance.
+              using SQL and excel to create the final reports.
+              <a href="https://github.com/ahmed-gharib89/deploy-sentiment-analysis-model" target="_blank">See project</a>
+            </p>
+            </div>
+          </div>
+        </div>
+        <br>
+
         <div class="w3-container w3-card w3-white">
           <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Education</h2>
           <div class="w3-container">
