update project section

--- a/index.html
+++ b/index.html
@@ -162,13 +162,14 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h5 class="w3-opacity"><b>We Rate Dog Analysis</b></h5>
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2020</h6>
             <p>
-              We rate dog is a twitter account with funny and interesting tweets of rating dogs.
+              We rate dog is a twitter account with funny and interesting tweets of rating dogs.<br>
               The project main objectives were:
-              - Perform data wrangling (gathering, assessing and cleaning) on the provided sources of data.
-              - Store, analyze, and visualize the wrangled data.
-              - Reporting on
-              - data wrangling efforts.
-              - data analyses and visualizations.
+              <ul>
+              <li> Perform data wrangling (gathering, assessing and cleaning) on the provided sources of data </li>
+              <li> Store, analyze, and visualize the wrangled data </li>
+              <li> data wrangling efforts report</li>
+              <li> data analyses and visualizations report</li>
+              </ul>
               <a href="https://github.com/ahmed-gharib89/deploy-sentiment-analysis-model" target="_blank">See project</a>
             </p>
             </div>
@@ -179,16 +180,18 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                 a plagiarism detector that examines a text file and performs binary classification;<br>
                  labeling that file as either plagiarized or not, depending on how similar that text file is to a provided source text.
                 technology used: 
-                  - Pytorch: fully connected neral network to discover the battern in the data.
-                  - AWS Sagemaker.
+                <ul>
+                  <li> Pytorch: fully connected neral network to discover the battern in the data </li>
+                  <li> AWS Sagemaker </li>
+                </ul>
                 <a href="https://github.com/ahmed-gharib89/Plagiarism_Detection" target="_blank">See project</a>
               </p>
             <h5 class="w3-opacity"><b>Sakila DVD Rental Analysis</b></h5>
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jul 2020</h6>
             <p>
-              The Sakila Database holds information about a company that rents movie DVDs.
-              ln this project we discover the customer base, such as what the patterns in movie watching are across different customer groups, how they compare on payment earnings, and how the stores compare in their performance.
-              using SQL and excel to create the final reports.
+              The Sakila Database holds information about a company that rents movie DVDs.<br>
+              ln this project we discover the customer base, such as what the patterns in movie watching are across different customer groups, how they compare on payment earnings, and how the stores compare in their performance.<br>
+              using SQL and excel to create the final reports.<br>
               <a href="https://github.com/ahmed-gharib89/deploy-sentiment-analysis-model" target="_blank">See project</a>
             </p>
             </div>
