remove the brs from left section

--- a/index.html
+++ b/index.html
@@ -129,9 +129,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <br>
         </div>
         <br>
-        <br>
-        <br>
-        <br>
       </div><br>
 
     <!-- End Left Column -->
@@ -156,7 +153,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h5 class="w3-opacity"><b>Deploy Sentiment Analysis Model</b></h5>
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>ٍSep 2020</h6>
             <p>
-              Web app to analyse movie reviews using Pytorch and RNNs to create a model that can predict whether the review is positive or negative and deployed the web application on AWS.
+              Web app to analyse movie reviews using Pytorch and RNNs to create a model that can predict whether the review is positive or negative and deployed the web application on AWS.<br>
               <a href="https://github.com/ahmed-gharib89/deploy-sentiment-analysis-model" target="_blank">See project</a>
             </p>
             <h5 class="w3-opacity"><b>We Rate Dog Analysis</b></h5>
