--- a/index.html
+++ b/index.html
@@ -153,35 +153,35 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h5 class="w3-opacity"><b>Deploy Sentiment Analysis Model</b></h5>
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>ٍSep 2020</h6>
             <p>
-              Web app to analyse movie reviews using Pytorch and RNNs to create a model that can predict whether the review is positive or negative and deployed the web application on AWS.<br>
+              Web app to analyze movie reviews using Pytorch and RNNs to create a model that can predict whether the review is positive or negative and deployed the web application on AWS.<br>
               <a href="https://github.com/ahmed-gharib89/deploy-sentiment-analysis-model" target="_blank">See project</a>
             </p>
-            <h5 class="w3-opacity"><b>We Rate Dog Analysis</b></h5>
-            <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2020</h6>
+            <h5 class="w3-opacity"><b>Plagiarism Detection</b></h5>
+            <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>ٍSep 2020</h6>
             <p>
-              We rate dog is a twitter account with funny and interesting tweets of rating dogs.<br>
-              The project main objectives were:
+              a plagiarism detector that examines a text file and performs binary classification;<br>
+               labeling that file as either plagiarized or not, depending on how similar that text file is to a provided source text.
+              technology used: 
               <ul>
-              <li> Perform data wrangling (gathering, assessing and cleaning) on the provided sources of data </li>
-              <li> Store, analyze, and visualize the wrangled data </li>
-              <li> data wrangling efforts report</li>
-              <li> data analyses and visualizations report</li>
+                <li> Pytorch </li>
+                <li> AWS Sagemaker </li>
               </ul>
-              <a href="https://github.com/ahmed-gharib89/deploy-sentiment-analysis-model" target="_blank">See project</a>
+              <a href="https://github.com/ahmed-gharib89/Plagiarism_Detection" target="_blank">See project</a>
             </p>
             </div>
             <div class="w3-half">
-              <h5 class="w3-opacity"><b>Plagiarism Detection</b></h5>
-              <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>ٍSep 2020</h6>
+              <h5 class="w3-opacity"><b>We Rate Dog Analysis</b></h5>
+              <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2020</h6>
               <p>
-                a plagiarism detector that examines a text file and performs binary classification;<br>
-                 labeling that file as either plagiarized or not, depending on how similar that text file is to a provided source text.
-                technology used: 
+                We rate dog is a twitter account with funny and interesting tweets of rating dogs.<br>
+                The project main objectives were:
                 <ul>
-                  <li> Pytorch: fully connected neral network to discover the battern in the data </li>
-                  <li> AWS Sagemaker </li>
+                <li> Perform data wrangling (gathering, assessing and cleaning) on the provided sources of data </li>
+                <li> Store, analyze, and visualize the wrangled data </li>
+                <li> data wrangling efforts report</li>
+                <li> data analyses and visualizations report</li>
                 </ul>
-                <a href="https://github.com/ahmed-gharib89/Plagiarism_Detection" target="_blank">See project</a>
+                <a href="https://github.com/ahmed-gharib89/deploy-sentiment-analysis-model" target="_blank">See project</a>
               </p>
             <h5 class="w3-opacity"><b>Sakila DVD Rental Analysis</b></h5>
             <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jul 2020</h6>
