--- a/index.html
+++ b/index.html
@@ -60,7 +60,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <div class="w3-center w3-text-white">60%</div>
             </div>
             </div>
-            <p>Deep-Learnin (Pytorch, Tensor Flow, Keras</p>
+            <p>Deep-Learnin (Pytorch, Tensor Flow, Keras)</p>
+            <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:60%">
+              <div class="w3-center w3-text-white">60%</div>
+            </div>
+            </div>
+            <p>Cloud computing (Aws, Microsoft Azure)</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:60%">
               <div class="w3-center w3-text-white">60%</div>
