--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <div class="w3-center w3-text-white">80%</div>
             </div>
             </div>
-            <p>SQL </p>
+            <p>SQL (SQL-Server, Postgresql, MySql)</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:80%">
               <div class="w3-center w3-text-white">80%</div>
