update contact info and project section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-black"></i>Cairo, Egypt</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-black"></i>a.gharib89@yahoo.com</p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-black"></i>01096995535</p>
+          <p><i class="fa fa-github fa-fw w3-margin-right w3-large w3-text-black"></i><a href="https://github.com/ahmed-gharib89" target="_blank">Github profile</a></p>
+          <p><i class="fa fa-linkedin fa-fw w3-margin-right w3-large w3-text-black"></i><a href="https://www.linkedin.com/in/ahmed-abdel-moniem-gharib/" target="_blank">Linkedin profile</a></p>
           <hr>
 
            <p class="w3-large"><b><i class="fa fa-forward fa-fw w3-margin-right w3-text-black"></i>Skills</b></p>
@@ -54,13 +56,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <div class="w3-center w3-text-white">80%</div>
             </div>
             </div>
-            <p>Machine-Learnin (Scikit-learn, SciPy)</p>
+            <p>Machine learnin (Scikit-learn, SciPy)</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:60%">
               <div class="w3-center w3-text-white">60%</div>
             </div>
             </div>
-            <p>Deep-Learnin (Pytorch, Tensor Flow, Keras)</p>
+            <p>Deep learnin (Pytorch, TensorFlow, Keras)</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:60%">
               <div class="w3-center w3-text-white">60%</div>
@@ -156,45 +158,52 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div class="w3-container">
             <div class="w3-half">
             <h5 class="w3-opacity"><b>Deploy Sentiment Analysis Model</b></h5>
-            <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>ٍSep 2020</h6>
+            <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>ٍSep 2020 &nbsp;&nbsp;
+            <a href="https://github.com/ahmed-gharib89/deploy-sentiment-analysis-model" target="_blank">See project</a>
+            </h6>
             <p>
-              Web app to analyze movie reviews using Pytorch and RNNs to create a model that can predict whether the review is positive or negative and deployed the web application on AWS.<br>
-              <a href="https://github.com/ahmed-gharib89/deploy-sentiment-analysis-model" target="_blank">See project</a>
+              <ul>
+                <li>Developed simple web app</li>
+                <li>Developed an RNN neural network to analyze the movie review whether positive or negative with accuracy 88%</li>
+                <p>Technology used: Python, Pytorch, AWS.</p>
+              </ul>
             </p>
             <h5 class="w3-opacity"><b>Plagiarism Detection</b></h5>
-            <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>ٍSep 2020</h6>
-            <p>
-              a plagiarism detector that examines a text file and performs binary classification;<br>
-               labeling that file as either plagiarized or not, depending on how similar that text file is to a provided source text.
-              technology used: 
-              <ul>
-                <li> Pytorch </li>
-                <li> AWS Sagemaker </li>
-              </ul>
+            <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>ٍSep 2020 &nbsp;&nbsp;
               <a href="https://github.com/ahmed-gharib89/Plagiarism_Detection" target="_blank">See project</a>
+            </h6>
+            <p>
+              <ul>
+                <li>Created new features to measure the similaraty between answer and source text like containment and longest common subsequence</li>
+                <li>Developed a binary cassification neural network with accuracy of 100% </li>
+                <p>Technology used: Python, Pytorch, AWS.</p>
+              </ul>
             </p>
             </div>
             <div class="w3-half">
               <h5 class="w3-opacity"><b>We Rate Dog Analysis</b></h5>
-              <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2020</h6>
+              <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2020 &nbsp;&nbsp;
+                <a href="https://github.com/ahmed-gharib89/deploy-sentiment-analysis-model" target="_blank">See project</a>
+              </h6>
               <p>
                 We rate dog is a twitter account with funny and interesting tweets of rating dogs.<br>
-                The project main objectives were:
                 <ul>
-                <li> Perform data wrangling (gathering, assessing and cleaning) on the provided sources of data </li>
-                <li> Store, analyze, and visualize the wrangled data </li>
-                <li> data wrangling efforts report</li>
-                <li> data analyses and visualizations report</li>
+                <li> Gathered the data from 3 sources (csv, downloaded a tsv file, and twitter API) </li>
+                <li> Cleaned and saved the combined data into SQL database </li>
+                <li> Created report for the analysis and visualization</li>
+                <p>Technology used: Python, SQL, Powerpoint</p>
                 </ul>
-                <a href="https://github.com/ahmed-gharib89/deploy-sentiment-analysis-model" target="_blank">See project</a>
               </p>
             <h5 class="w3-opacity"><b>Sakila DVD Rental Analysis</b></h5>
-            <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jul 2020</h6>
-            <p>
-              The Sakila Database holds information about a company that rents movie DVDs.<br>
-              ln this project we discover the customer base, such as what the patterns in movie watching are across different customer groups, how they compare on payment earnings, and how the stores compare in their performance.<br>
-              using SQL and excel to create the final reports.<br>
+            <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jul 2020 &nbsp;&nbsp;
               <a href="https://github.com/ahmed-gharib89/deploy-sentiment-analysis-model" target="_blank">See project</a>
+            </h6>
+            <p>
+              <ul>
+                <li> Queried the database and Exported csv reports</li>
+                <li> Created reports for the customor analysis using Excel</li>
+                <p> Technology used: Postgresql, Excel, Powerpoint</p>
+              </ul>
             </p>
             </div>
           </div>
